compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_arity_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 860
expression: "external fn go(List(a, b)) -> a = \"\" \"\""

---
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:16
  │
1 │ external fn go(List(a, b)) -> a = "" ""
  │                ^^^^^^^^^^ expected 1 arguments, got 2

Functions and constructors have to be called with their expected
number of arguments.

